# yuna-bud-os

./: .coverage  .coveragerc  .env.example  .gitignore  .secrets.baseline  .tool-versions  .vercelignore  00-PROJECT-GUIDE.md  01-PROJECT-NAME.md  02-DESIGN-PRINCIPLES.md  03-COLOR-PALLETE.md  04-TYPOGRAPHY.md  05-ICONOGRAPHY.md  06-DESIGN-METAPHOR.md  07-COMPONENT-SYSTEM.md  08-COMPONENT-BUTTONS.md  09-COMPONENT-INPUTS.md  10-COMPONENT-CARDS.md  11-COMPONENT-CHARTS.md  12-COMPONENT-MODALS.md  13-COMPONENT-NOTIFICATIONS.md  14-COMPONENT-SLIDERS.md  15-COMPONENT-TABLES.md  16-COMPONENT-SIDE-MENUS.md  17-COMPONENT-FORMS.md  18-COMPONENT-NAVIGATION.md  19-COMPONENT-FOOTERS.md  20-COMPONENT-HEADER.md  21-LAYOUT-GRID.md  22-LAYOUT-CONTAINERS.md  23-SPACING-SYSTEM.md  24-MOTION-DESIGN.md  25-DARK-MODE-PROTOCOL.md  26-ACCESSIBILITY-STD.md  27-RESPONSIVE-STRATEGY.md  28-ARCHITECTURE-OVERVIEW.md  29-TECH-STACK.md  30-STATE-MANAGEMENT.md  31-DATABASE-SCHEMA.md  32-APP-SHIVEL-SCREENS.md  (+35 more)
data/: bip_site_index.json  (+4 more)
services/api/: pyproject.toml
services/api/services/: __init__.py
services/api/services/api/: __init__.py  cache.py  celery_app.py  main.py  metrics.py  performance.py  security_audit.py  seed.py  tasks.py
services/api/services/api/analytics/: __init__.py  cost_estimation.py
services/api/services/api/auth/: deps.py  router.py  utils.py
services/api/services/api/integrations/: hubspot.py  n8n_client.py
services/api/services/api/intelligence/: benchmark_seed.py  buyer_score.py  document_generator.py  material_risk.py  pdf_generator.py  win_prob.py  win_prob_ml.py
(+557 files in other folders)
